# marketpulse-backend

./: .gitignore  Dockerfile  README.md  cli.py  entrypoint.sh  feedback.md  market_analysis_2025-03-24.json  market_analysis_2025-03-25.json  pyproject.toml  railway.json  requirements-dev.txt  requirements.txt
.cache/influencers/: donald_trump.json  elon_musk.json  jerome_powell.json
.cache/news/: alphabet_inc_googl_news.json  amazoncom_inc_amzn_news.json  apple_inc_aapl_news.json  exxon_mobil_corp_xom_news.json  financial_news_last_24_hours_major_events_economic_indicators_central_bank_decisions_geopolitical_risks_market_trends.json  global_financial_news_major_events_economic_data_releases_central_bank_actions_geopolitical_developments_market_trends.json  johnson__johnson_jnj_news.json  jpmorgan_chase__co_jpm_news.json  latest_financial_news_24_hours_economic_indicators_central_banks_geopolitical_events_market_trends.json  latest_global_economic_news_major_market_events_today_central_bank_announcements_geopolitical_news.json  latest_global_financial_news_major_events_economic_reports_central_bank_actions_geopolitical_news_market_trends.json  latest_major_financial_news_events_economic_data_central_bank_policies_geopolitical_trends_market_movements.json  major_marketmoving_financial_news_economic_data_releases_central_bank_announcements_geopolitical_events_sector_trends.json  microsoft_corp_msft_news.json  nvidia_corp_nvda_news.json  procter__gamble_co_pg_news.json  recent_global_financial_news_major_economic_indicators_central_bank_policies_geopolitical_developments.json  tesla_inc_tsla_news.json  todays_financial_market_news_major_events_economic_data_central_bank_updates_geopolitical_developments.json  todays_market_news_financial_events_economic_data_central_bank_announcements_geopolitical_updates.json  todays_top_financial_news_events_economic_releases_central_bank_updates_geopolitical_risks_market_trends.json
.cache/quotes/: AAPL.json  (+9 more)
examples/: portfolio.json  preferences.json
tests/: conftest.py  test_agent_config.py  test_api.py  test_caching.py  test_clean_json.py  test_crew.py  test_market_sentiment_crew.py  test_market_sentiment_flow.py  test_market_tools.py  test_model_config.py  test_search_rank_flow.py  test_search_tool.py  test_stream_utils.py  test_task_processor.py
(+29 files in other folders)
