[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "howdoyoufindme"
version = "0.1.0"
description = "HowDoYouFindMe Backend"
requires-python = ">=3.12"
dependencies = [
    "crewai",
    "langchain-community>=0.0.10",
    "langchain-openai>=0.0.2",
    "langchain-core>=0.1.4",
    "fastapi>=0.104.1",
    "uvicorn>=0.24.0",
    "python-dotenv>=1.0.0",
    "pydantic>=2.5.2"
]

[tool.hatch.build.targets.wheel]
packages = ["src/howdoyoufindme"]