[tool.poetry]
name = "marketpulse"
version = "0.1.0"
description = "MarketPulse Backend"
authors = ["Your Name <you@example.com>"]
readme = "README.md"
packages = [{include = "marketpulse", from = "src"}]

[tool.poetry.dependencies]
python = ">=3.12,<3.13"
crewai = ">=0.34.5"
langchain = ">=0.0.316"
langchain-community = ">=0.0.12"
fastapi = ">=0.110.0"
uvicorn = ">=0.25.0"
python-dotenv = ">=1.0.0"
pydantic = ">=2.5.2"
openai = ">=1.68.2"
requests = ">=2.31.0"
pyyaml = ">=6.0.1"
aiohttp = ">=3.9.3"
google-search-results = ">=2.4.2"
streamlit = "^1.34.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
